--- a/index.css
+++ b/index.css
@@ -12,8 +12,11 @@
   .socials{
     max-width: 100vw;
   }
+  .socialsAlpha{
+    max-width: 100vw;
+  }
   .long{
-    font-size: 95vw;
+    font-size: 1.3em;
   }
 }
 
