--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
     max-width: 100vw;
   }
   .long{
-    font-size: 1.3em;
+    font-size: 1em;
   }
 }
 
@@ -136,7 +136,7 @@ i {
   text-align: center;
   color: var(--white);
   opacity: 0.82;
-  max-width: 720px;
+  max-width: 700px;
   margin: auto;
   margin-bottom: 20px;
 }
@@ -213,7 +213,7 @@ i {
 .footer {
   background: var(--heading-color);
   padding-top: 50px;
-  padding: 40px;
+  padding: 4vw;
   overflow: hidden;
 }
 
