--- a/css/relay.css
+++ b/css/relay.css
@@ -12,17 +12,6 @@
     color: #92E7FF !important;
   }
 
-  .primaryBtn {
-    background-color: #92E7FF !important;
-    color: #59316B !important;
-  }
-
-  .btn {
-    border: 2px solid #92E7FF;
-    color: #92E7FF;
-    background: none;
-  }
-
   iframe {
     background-color: white;
   }
@@ -53,15 +42,12 @@
   }
 }
 
-body {
-}
-
 p, a, h1 {
   color: white !important;
 }
 
 h2 {
-  font-family: "Serif";
+  font-family: "Helvetica Neue", Helvetica, "Inter", sans-serif;
   font-weight: inherit;
   font-size: calc(var(--font-size-1) * 1.0125);
   margin-bottom: var(--spacing-small);
@@ -83,14 +69,6 @@ iframe {
   border-radius: .5rem;
   box-shadow: 0 1rem 3rem -.5rem rgba(0,0,0,0.25);
   margin: 0 auto 0 0;
-}
-
-@media only screen and (max-width: 1280px) {
-
-}
-
-@media only screen and (max-width: 1024px) {
-
 }
 
 @media only screen and (max-width: 960px) {
